# x1-solXEN

./: .gitignore  Cargo.toml  README.md  admin-create-solXEN-on-X1-testnet.sh  build.sh  solXEN-metadata.json
src/: config.rs  database.rs  html.rs  main.rs  migrator.rs  minter.rs  types.rs
