[package]
name = "x1-solxen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
# Use more compatible versions
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0.0"
spl-token-2022 = "3.0.5"
spl-associated-token-account = "2.0.0"
anchor-lang = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
# Use rusqlite instead of sqlx to avoid complex dependencies
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tera = "1.19"
base64 = "0.21"
bs58 = "0.5"
dirs = "5.0"
rust_decimal = { version = "1.0", features = ["serde-with-str"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "x1-solxen"
path = "src/main.rs"
